@@ -29,13 +29,15 @@ import java.io.IOException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.ByteBuffer;
+import java.nio.file.FileSystem;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.BooleanSupplier;
+
+import org.graalvm.nativeimage.hosted.RuntimeClassInitialization;
 
 import com.oracle.svm.core.annotate.Alias;
 import com.oracle.svm.core.annotate.Delete;
@@ -48,6 +50,7 @@ import com.oracle.svm.core.jdk.JRTSupport.JRTDisabled;
 import com.oracle.svm.core.jdk.JRTSupport.JRTEnabled;
 import com.oracle.svm.core.option.HostedOptionKey;
 import com.oracle.svm.core.util.VMError;
+import com.oracle.svm.util.ReflectionUtil;
 
 import jdk.graal.compiler.options.Option;
 import jdk.graal.compiler.options.OptionType;
@@ -83,17 +86,14 @@ public final class JRTSupport {
 }
 
 @AutomaticallyRegisteredFeature
-class JRTDisableFeature implements InternalFeature {
-
-    @Override
-    public boolean isInConfiguration(IsInConfigurationAccess access) {
-        return !JRTSupport.Options.AllowJRTFileSystem.getValue();
-    }
-
-    @SuppressWarnings("unchecked")
+class JRTFeature implements InternalFeature {
     @Override
     public void beforeAnalysis(BeforeAnalysisAccess access) {
-        ServiceCatalogSupport.singleton().removeServicesFromServicesCatalog("java.nio.file.spi.FileSystemProvider", new HashSet<>(Arrays.asList("jdk.internal.jrtfs.JrtFileSystemProvider")));
+        if (JRTSupport.Options.AllowJRTFileSystem.getValue()) {
+            RuntimeClassInitialization.initializeAtRunTime(ReflectionUtil.lookupClass("jdk.internal.jrtfs.SystemImage"));
+        } else {
+            ServiceCatalogSupport.singleton().removeServicesFromServicesCatalog("java.nio.file.spi.FileSystemProvider", Set.of("jdk.internal.jrtfs.JrtFileSystemProvider"));
+        }
     }
 }
 
@@ -179,6 +179,13 @@ final class Target_sun_net_www_protocol_jrt_Handler_JRTDisabled {
 @TargetClass(className = "jdk.internal.jrtfs.JrtFileSystemProvider", onlyWith = JRTDisabled.class)
 @Delete
 final class Target_jdk_internal_jrtfs_JrtFileSystemProvider_JRTDisabled {
+}
+
+@TargetClass(className = "jdk.internal.jrtfs.JrtFileSystemProvider", onlyWith = JRTEnabled.class)
+final class Target_jdk_internal_jrtfs_JrtFileSystemProvider_BuildTime {
+    @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.Reset)//
+    @Alias//
+    volatile FileSystem theFileSystem;
 }
 
 // endregion Disable jimage/jrtfs
